Fixed text wrapping

--- a/public/projects/ifweb/css/style.css
+++ b/public/projects/ifweb/css/style.css
@@ -62,7 +62,7 @@ html {
     font-size: 13px;
     overflow: scroll;
 
-    white-space: pre;
+    white-space: pre-wrap;
     text-indent: 0px;
 
 }
